<resources>
    <string name="app_name">DoSoptTemplate</string>
    <string name="tv_signup"><u>회원가입 하기</u></string>
    <string name="fab_content_desc" />
    <string name="searchbar_scrolling_view_behavior" />
    <string name="searchbar_hint" />
    <string name="tv_name">허민회</string>
    <string name="tv_email">hhmmm1005@naver.com</string>
    <string name="tv_sign_up_title">SIGN UP</string>
    <string name="et_sign_up_id">ID</string>
    <string name="et_sign_up_pw">PASSWORD</string>
    <string name="et_sign_up_name">닉네임</string>
    <string name="et_sign_up_mbti">MBTI</string>
    <string name="sign_up">회원가입 하기</string>
    <string name="tv_sign_in_title">Welcome to Sopt</string>
    <string name="tf_id">ID</string>
    <string name="tf_pw">PASSWORD</string>
    <string name="sign_in">로그인 하기</string>
    <string name="tv_do_android_bnv_title">안봉이들 화이팅</string>
    <string name="main_id">ID</string>
    <string name="main_mbti">MBTI</string>
    <string name="check_id_valid">영문, 숫자를 포함해 6-10자 이내로 쓰십시오</string>
    <string name="check_pw_valid">영문,숫자,특수문자를 포함해 6-12자 이내로 쓰십시오</string>
    <string name="signup_success">회원가입 성공</string>
    <string name="signup_fail">회원가입 실패</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인 실패</string>
</resources>
