<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authViewModel"
            type="org.sopt.dosopttemplate.presentation.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".presentation.auth.LoginActivity">

        <TextView
            android:id="@+id/tv_sign_in_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tv_sign_in_title"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/tf_id"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_in_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={authViewModel.loginId}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/tf_pw"
            app:layout_constraintTop_toBottomOf="@id/tf_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_in_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={authViewModel.loginPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/sign_in"
            android:onClick="@{()->authViewModel.login()}"
            android:background="@drawable/rectangle_btn_pink"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:text="@string/tv_signup"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
