<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authSignUpViewModel"
            type="org.sopt.dosopttemplate.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/tv_sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tv_sign_up_title"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_sign_up_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_sign_up_id"
                android:text="@={authSignUpViewModel.id}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_sign_up_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_sign_up_pw"
                android:inputType="textPassword"
                android:text="@={authSignUpViewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={authSignUpViewModel.nickname}"
                android:hint="@string/et_sign_up_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_sign_up_mbti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_mbti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_sign_up_mbti"
                android:text="@={authSignUpViewModel.mbti}"
                android:inputType="textCapCharacters" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/sign_up"
            android:onClick="@{() -> authSignUpViewModel.signUp()}"
            android:enabled="@{authSignUpViewModel.checkBtnEnabled}"
            android:background="@{authSignUpViewModel.checkBtnEnabled? @drawable/rectangle_btn_pink : @drawable/rectangle_btn_gray}"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
